Fixed Encoding problem and added endpoints for different datasets